<resources>
    <string name="app_name">Login</string>
    <string name="txtNombre">Usuario</string>
    <string name="txtContra">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="buscar">Buscar</string>
    <string name="ingresar">Ingresar</string>
    <string name="tv1">Sesicon iniciada Exitosamente</string>
    <string name="boton2">Regresar</string>

</resources>